gccida/g2/init_propagate_block_info
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2270:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2270:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2286:28: error: expected expression
v10->reg_next_use = ( rtx *)xcalloc( v15, 8uLL); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2303:45: error: expected ')'
for ( i = bb->end; bb->head != i; i = ( rtx)i[1] ) 
                                            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2303:5: note: to match this '('
for ( i = bb->end; bb->head != i; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2307:13: error: expected ';' after expression
v17 = ( rtx)i[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2313:1: error: use of undeclared identifier 'v19'
v19 = canon_rtx( rtx); 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2314:7: error: use of undeclared identifier 'v19'
v20 = v19; 
      ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2315:21: error: use of undeclared identifier 'v19'
if ( ( *( ( _BYTE *)v19 + 3) & 4) == 0 ) 
                    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2317:24: error: use of undeclared identifier 'v19'
v21.rtwint = ( __int64)v19->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/flow.c:2320:29: error: expected expression
&& global_rtl[3] == *( rtx *)( v21.rtwint + 8) 
                            ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_propagate_block_info/src/obj/flow.o] Error 1
